--- a/portfolio-murabito-v2/package.json
+++ b/portfolio-murabito-v2/package.json
@@ -13,10 +13,12 @@
     "@fortawesome/react-fontawesome": "^0.2.3",
     "@hugeicons/react": "^1.0.5",
     "@radix-ui/react-slot": "^1.2.3",
+    "@tanstack/react-query": "^5.85.6",
     "@tsparticles/engine": "^3.9.1",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.9.1",
     "@types/three": "^0.179.0",
+    "@upstash/redis": "^1.35.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
