--- a/portfolio-murabito-v2/package.json
+++ b/portfolio-murabito-v2/package.json
@@ -12,8 +12,9 @@
     "@fortawesome/free-brands-svg-icons": "^7.0.0",
     "@fortawesome/react-fontawesome": "^0.2.3",
     "@hugeicons/react": "^1.0.5",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-slot": "^1.2.3",
-    "@tanstack/react-query": "^5.85.6",
+    "@tanstack/react-query": "^5.87.1",
     "@tsparticles/engine": "^3.9.1",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.9.1",
