--- a/portfolio-murabito-v2/package.json
+++ b/portfolio-murabito-v2/package.json
@@ -26,9 +26,11 @@
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
     "next-themes": "^0.4.6",
+    "node-redis": "^0.1.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-type-animation": "^3.2.0",
+    "redis": "^5.8.2",
     "shadcn-ui": "^0.9.5",
     "tailwind-merge": "^3.3.1",
     "three": "^0.179.1"
