--- a/portfolio-murabito-v2/package.json
+++ b/portfolio-murabito-v2/package.json
@@ -20,6 +20,7 @@
     "@tsparticles/slim": "^3.9.1",
     "@types/three": "^0.179.0",
     "@upstash/redis": "^1.35.3",
+    "@vercel/analytics": "^1.6.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
