--- a/portfolio-murabito-v2/package.json
+++ b/portfolio-murabito-v2/package.json
@@ -25,12 +25,12 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.539.0",
-    "next": "16.0.1",
+    "next": "^16.0.7",
     "next-intl": "^4.5.0",
     "next-themes": "^0.4.6",
     "node-redis": "^0.1.7",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-type-animation": "^3.2.0",
     "redis": "^5.8.2",
     "shadcn-ui": "^0.9.5",
